--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React webpack starter</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
   <div id="container"></div>
